--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bootstrap": "^5.3.3",
     "fullcalendar": "^6.1.15",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3"
   },
